syntax = "proto3";

package rpc1;
option go_package = "rpc1";

//service definition.
service RpcCommunicator1 
{
  rpc getRpc1Msg(RequestParams) returns (Rpc1Reply) {}
}

// The response message
message Rpc1Reply 
{
  string rpc1_msg = 1;
}

//Empty message for request header since currently there are no request params
message RequestParams {}

